# cosmos-predict2.5

./: .gitignore  README.md  pyproject.toml  run_action_planning_vla.sh
assets/action_conditioned/basic/: planning_params.json  planning_params_vla.json
cosmos_predict2/: action_conditioned.py  action_conditioned_config.py  mb_planning.py  mb_planning_config.py  vla_bridge_adapter.py  vla_inference.py
cosmos_predict2/_src/imaginaire/utils/: checkpoint_db.py
cosmos_predict2/_src/predict2/action/models/: action_conditioned_video2world_rectified_flow_model.py
cosmos_predict2/_src/predict2/inference/: video2world.py
cosmos_predict2/_src/predict2/models/: text2world_model_rectified_flow.py
docs/: inference_robot_multiview-agibot.md  rectified-flow.ipynb
examples/: action_conditioned_check_action_range.py  action_conditioned_planning.py
scripts/: plot_planning_stats.py  verify_action_alignment.py
tests/: docs_test.py
tests/docs_test/: action_conditioned.sh
tests/gradio/: test_worker.py
vla-clip/CoVer_VLA/inference/experiments/robot/simpler/: eval_utils.py
