# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-predict2"
dynamic = ["version"]
authors = [
  {name = "NVIDIA Corporation"},
]
description = "Cosmos Predict2 World Foundation Model"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cosmos-oss==0.1.0",
]

[project.optional-dependencies]
gradio = ["cosmos-oss[gradio]"]
cu128 = ["cosmos-oss[cu128_torch27]"]
cu130 = ["cosmos-oss[cu130_torch29]"]
# VLA (PI0/lerobot) deps from vla-clip - use with: uv run --extra cu128 --extra vla
vla = [
  "datasets>=2.19.0",
  "draccus>=0.8.0",
  "einops>=0.8.0",
  "h5py>=3.10.0",
  "imageio[ffmpeg]>=2.34.0",
  "jsonlines>=4.0.0",
  "numba>=0.59.0",
  "omegaconf>=2.3.0",
  "opencv-python-headless>=4.9.0",
  "av>=12.0.5",
  "termcolor>=2.4.0",
  "wandb>=0.16.3",
  "zarr>=2.17.0",
  "deepdiff>=7.0.1",
  "diffusers>=0.27.2",
  "gymnasium>=0.29.1",
  "packaging>=24.2",
  "pymunk>=6.6.0",
  "pyzmq>=26.2.1",
  "rerun-sdk>=0.21.0",
  "gdown>=5.1.0",
  "flask>=3.0.3",
]

[dependency-groups]
dev = ["cosmos-oss[dev,gradio]"]

[project.readme]
content-type = "text/markdown"
text = '''
# Cosmos-Predict2

[Documentation](https://github.com/nvidia-cosmos/cosmos-predict2/blob/main/README.md)
'''

[project.urls]
documentation = "https://github.com/nvidia-cosmos/cosmos-predict2/blob/main/README.md"
homepage = "https://research.nvidia.com/labs/dir/cosmos-predict2"
issues = "https://github.com/nvidia-cosmos/cosmos-predict2/issues"
repository = "https://github.com/nvidia-cosmos/cosmos-predict2"

[tool.uv]
conflicts = [
  [{extra = "cu128"}, {extra = "cu129"}, {extra = "cu130"}],
]
override-dependencies = ["numpy>=2.0.0"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cosmos-oss = [{ workspace = true }]

[tool.hatch.version]
path = "cosmos_predict2/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
  "cosmos_predict2",
]
include = [
  "sitecustomize.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "cosmos_predict2",
]
include = [
  "sitecustomize.py",
]
exclude = [
  "*_test.py",
]

[tool.coverage.run]
parallel = true
concurrency = ["thread", "multiprocessing"]
source = ["cosmos_predict2"]
sigterm = true

[tool.coverage.paths]
source = [
  "cosmos_predict2/",
  "*/site-packages/cosmos_predict2/",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]
